# llm-dos

./: .gitignore  README.md  pyproject.toml  run_pyhook.sh  run_vllm.sh
ebpf/cuda-tracing/: Makefile  cuda_evt.h  cuda_trace.bpf.c  cuda_trace.c  helper.h
experiments/: send_all_prompts.sh  send_all_prompts_combined.sh  send_all_prompts_cpu.sh  send_dos_prompts.py  send_dos_prompts_simple.py  send_normal_prompts.py  send_prompts.sh  send_prompts_simple.py
models/: metadata.json
pyhook/: app1.py  pyhook_agent.py  pyhook_collector.py  sitecustomize.py
scripts/: analyze_trace_completeness.py  build_llm_dos_dataset.py  run_early_detection.py  run_paper_experiments.py  train_classifiers.py  train_time_windowed.py
scripts/figures/: plot_cdf_duration.py  plot_early_detection.py
